--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/Custom-Elements/cm-payment-review.git"
+    "url": "https://github.com/Custom-Elements/cm-payment-review.git"
   },
   "author": "",
   "license": "ISC",
