--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/Custom-Elements/cm-payment-review.git"
   },
-  "author": "drewtron",
+  "author": "drewtron@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Custom-Elements/cm-payment-review/issues"
