--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Custom-Elements/cm-payment-review.git"
-  },
+  "repository": "git@github.com:Custom-Elements/cm-payment-review.git",
   "author": "",
   "license": "ISC",
   "bugs": {
