--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "git@github.com:Custom-Elements/cm-payment-review.git",
-  "author": "",
+  "author": "Andrew Friedrich <drewtron@gmail.com>",
   "license": "ISC",
-  "homepage": "https://github.com/Custom-Elements/cm-payment-review"
 }
