--- a/package.json
+++ b/package.json
@@ -13,5 +13,5 @@
   },
   "repository": "git@github.com:Custom-Elements/cm-payment-review.git",
   "author": "Andrew Friedrich <drewtron@gmail.com>",
-  "license": "ISC",
+  "license": "ISC"
 }
