--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
   "name": "cm-payment-review",
   "version": "1.0.0",
-  "description": "",
+  "description": "a",
+  "main": "index.js",
   "dependencies": {
-    "core-ajax-npm": "~0.0.0",
-    "polymer-serve": "~0.0.30"
+    "polymer-serve": "^0.0.30",
+    "core-ajax-npm": "^0.0.0"
   },
-  "repository": "git@github.com:Custom-Elements/cm-payment-review.git",
-  "author": "Andrew Friedrich <drewtron@gmail.com>",
-  "license": "ISC"
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Custom-Elements/cm-payment-review.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Custom-Elements/cm-payment-review/issues"
+  },
+  "homepage": "https://github.com/Custom-Elements/cm-payment-review#readme"
 }
